Fixes the active rows in light mode, and shifts the legend a bit closer to the table

--- a/resources/styles.css
+++ b/resources/styles.css
@@ -117,67 +117,67 @@ table.dataTable tbody tr td.proj_name {
   font-weight: bold;
 }
 
-table.dataTable.display tbody tr.active tr.odd {
+table.dataTable.display tbody tr.active.odd {
   background-color: #f4fff4;
 }
 
-table.dataTable.display tbody tr.active tr.even {
+table.dataTable.display tbody tr.active.even {
   background-color: #f8fff8;
 }
 
-table.dataTable.display tbody tr.active tr.odd:hover {
+table.dataTable.display tbody tr.active.odd:hover {
   background-color: #ecffec;
 }
 
-table.dataTable.display tbody tr.active tr.even:hover {
+table.dataTable.display tbody tr.active.even:hover {
   background-color: #f0fff0;
 }
 
-table.dataTable.display tbody tr.active tr.odd > td.sorting_1 {
+table.dataTable.display tbody tr.active.odd > td.sorting_1 {
   background-color: #f4fff4;
 }
 
-table.dataTable.display tbody tr.active tr.even > td.sorting_1 {
+table.dataTable.display tbody tr.active.even > td.sorting_1 {
   background-color: #f8fff8;
 }
 
-table.dataTable.display tbody tr.active tr.odd:hover > td.sorting_1 {
+table.dataTable.display tbody tr.active.odd:hover > td.sorting_1 {
   background-color: #ecffec;
 }
 
-table.dataTable.display tbody tr.active tr.even:hover > td.sorting_1 {
+table.dataTable.display tbody tr.active.even:hover > td.sorting_1 {
   background-color: #f0fff0;
 }
 
-table.dataTable.display tbody tr.active tr.odd > td.sorting_2 {
+table.dataTable.display tbody tr.active.odd > td.sorting_2 {
   background-color: #f4fff4;
 }
 
-table.dataTable.display tbody tr.active tr.even > td.sorting_2 {
+table.dataTable.display tbody tr.active.even > td.sorting_2 {
   background-color: #f8fff8;
 }
 
-table.dataTable.display tbody tr.active tr.odd:hover > td.sorting_2 {
+table.dataTable.display tbody tr.active.odd:hover > td.sorting_2 {
   background-color: #ecffec;
 }
 
-table.dataTable.display tbody tr.active tr.even:hover > td.sorting_2 {
+table.dataTable.display tbody tr.active.even:hover > td.sorting_2 {
   background-color: #f0fff0;
 }
 
-table.dataTable.display tbody tr.active tr.odd > td.sorting_3 {
+table.dataTable.display tbody tr.active.odd > td.sorting_3 {
   background-color: #f4fff4;
 }
 
-table.dataTable.display tbody tr.active tr.even > td.sorting_3 {
+table.dataTable.display tbody tr.active.even > td.sorting_3 {
   background-color: #f8fff8;
 }
 
-table.dataTable.display tbody tr.active tr.odd:hover > td.sorting_3 {
+table.dataTable.display tbody tr.active.odd:hover > td.sorting_3 {
   background-color: #ecffec;
 }
 
-table.dataTable.display tbody tr.active tr.even:hover > td.sorting_3 {
+table.dataTable.display tbody tr.active.even:hover > td.sorting_3 {
   background-color: #f0fff0;
 }
 
@@ -344,6 +344,7 @@ div.index-image {
   }
   div.legend_line {
     display: inline-block;
+    margin-top: 25px;
   }
 
   #projects_filter {
